test: fix code smells
NO-TICKET